# cookiecutter-pypackage

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.rst  README.md  TODO.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: dev.yml  publish.yml
1.1/: 404.html  index.html  sitemap.xml
1.1/console_script_setup/: index.html
1.1/faq/: index.html
1.1/history/: index.html
1.1/pypi_release_checklist/: index.html
1.1/tutorial/: index.html
console_script_setup/: index.html
docs/: console_script_setup.md  contributing.md  faq.md  history.md  pypi_release_checklist.md  tutorial.md
faq/: index.html
history/: index.html
hooks/: post_gen_project.py
latest/: 404.html  index.html  sitemap.xml
latest/changelog/: index.html
latest/console_script_setup/: index.html
latest/contributing/: index.html
latest/faq/: index.html
latest/history/: index.html
latest/pypi_release_checklist/: index.html
latest/search/: search_index.json
latest/tutorial/: index.html
pypi_release_checklist/: index.html
search/: search_index.json
tests/: test_bake_project.py
tutorial/: index.html
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/workflows/: dev.yml  preview.yml  release.yml
{{cookiecutter.project_slug}}/docs/: contributing.md
{{cookiecutter.project_slug}}/input/conf/: __init__.py  config.yaml
{{cookiecutter.project_slug}}/tests/: test_main.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: main.py  pipeline.py
