[tool]
[tool.poetry]
name = "cookiecutter-pypackage"
version = "1.1.2"
description = "Cookiecutter template for a Python package"
license = "BSD-3-Clause"
authors = ["Chee Yee Lim"]
readme = "README.md"
repository = "https://github.com/cheeyeelim/cookiecutter-pypackage"
documentation = "https://cheeyeelim.github.io/cookiecutter-pypackage/"
keywords = ['cookiecutter', 'template', 'package']

include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = "~3.9"
cookiecutter = "^2.3.0"
pip = "^23.2.1"
setuptools = "^68.0.0"

pytest = { version = "^7.4.0", optional = true }
pytest-cookies = { version = "^0.6.1", optional = true }
pytest-cov  = { version = "^4.1.0", optional = true }
tox = { version = "^4.7.0", optional = true }
pyyaml = { version = "^5.3.1", optional = true }
mkdocs = { version = "^1.5.2", optional = true }
mkdocs-material = { version = "^9.1.21", optional = true }
mkdocs-material-extensions = { version = "^1.1.1", optional = true }
mkdocs-include-markdown-plugin = { version = "^6.0.0", optional = true }
mkdocs-git-revision-date-plugin = { version = "^0.3.2", optional = true }
mike = { version = "^1.1.2", optional = true }

[tool.poetry.extras]
dev = [
  "pytest",
  "pytest-cookies",
  "pyyaml",
  "mkdocs",
  "mkdocs-material",
  "mkdocs-material-extensions",
  "mkdocs-include-markdown-plugin",
  "mkdocs-git-revision-date-plugin",
  "pytest-cov",
  "tox",
  "mike"
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
